03-metrics/prometheus/helm/02-ingressroute-prometheus.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.test`)
      services:
        - kind: Service
          name: stable-kube-prometheus-sta-prometheus
          port: 9090
